Fixed spacing from top on all three forms for mobile

--- a/public/app/login/login.scss
+++ b/public/app/login/login.scss
@@ -7,12 +7,6 @@
 	min-height: 94vh;
 	margin-bottom: -60px;
 	padding-bottom: 150px;
-	@media only screen and (max-width: 500px) {
-	    .login-card {
-	    	margin-top: 50px !important;
-
-	    }
-	}
  
 	.login-card {
 		max-width: 500px;
@@ -37,5 +31,11 @@
 		.small {
 			font-size: 12px;
 		}
+	}
+
+	@media only screen and (max-width: 600px) {
+	    .login-card {
+	    	margin-top: 30px !important;
+	    }
 	}
 }
